修改了Map到Json的转化时机,不需要用户手动换将方法返回值设置为string,现在可以自动判断